--- a/CarRental/src/main/resources/templates/rent_car.html
+++ b/CarRental/src/main/resources/templates/rent_car.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <table class ="table">
+    <table class ="table table-dark table-striped">
         <thead>
         <tr>
             <th scope="col">id</th>
@@ -16,19 +16,29 @@
             <th scope="col">carBrand</th>
             <th scope="col">pricePerDay</th>
             <th scope="col">available</th>
+            <th scope="col">RENT</th>
         </tr>
         </thead>
         <tbody>
             <tr th:each="car: ${cars}">
                 <td th:text="${car.id}"/>
                 <td th:text="${car.plates}"/>
-                <td th:text="${car.productionYear}"/>
+                <td th:text="${car.production_year}"/>
                 <td th:text="${car.model}"/>
-                <td th:text="${car.carBrand}"/>
-                <td th:text="${car.pricePerDay}"/>
+                <td th:text="${car.car_brand}"/>
+                <td th:text="${car.price_per_day}"/>
                 <td th:text="${car.available}"/>
             </tr>
         </tbody>
     </table>
+    <form th:action="@{/rent}" method="post">
+        <div>
+            <label>Car Id</label>
+            <input type="text" th:name="id">
+        </div>
+        <div>
+            <button type="submit"  class="btn btn-primary">Rent</button>
+        </div>
+    </form>
 </body>
 </html>
